add 1 step speculation

--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,9 @@ env/
 .DS_Store
 
 # Results and logs
+results_*/
 results.json
 *.log
 
 # GAIA dataset (optional - uncomment if you don't want to commit dataset)
 # gaia_dataset/
-
